--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,13 @@
-.info-reader{
+/* .info-reader{
   position: relative;
   top: 50%;
   left: 50%;
   color: #e6e6e6 !important;
 
 }
+
+svg{
+  fill: green !important;
+}
+​
+.bar { fill: blue !important; } */
